# antimicrobial-peptides-dop

./: main.py  pipeline.py  preprocessing.ipynb  pyproject.toml
data/: negative.xlsx  negative_species.csv  negative_species_frequency.xlsx  pcp_normalization.json  positive.xlsx  raw_data.csv  sampling_metrics.json  target_organism.csv
data/mlknn/: hyperparameters.json  predictions.xlsx  results.json
data/test/: test_1.csv  test_10.csv  test_2.csv  test_3.csv  test_4.csv  test_5.csv  test_6.csv  test_7.csv  test_8.csv  test_9.csv
data/test/aac/: test_aac_1.csv  test_aac_10.csv  test_aac_2.csv  test_aac_3.csv  test_aac_4.csv  test_aac_5.csv  test_aac_6.csv  test_aac_7.csv  test_aac_8.csv  test_aac_9.csv
data/test/cht/: test_cht_1.csv  test_cht_10.csv  test_cht_2.csv  test_cht_3.csv  test_cht_4.csv  test_cht_5.csv  test_cht_6.csv  test_cht_7.csv  test_cht_8.csv  test_cht_9.csv
data/test/combination/: test_combination_1.csv  test_combination_10.csv  test_combination_2.csv  test_combination_3.csv  test_combination_4.csv  test_combination_5.csv  test_combination_6.csv  test_combination_7.csv  test_combination_8.csv  test_combination_9.csv
data/train/: train_1.csv  train_10.csv  train_2.csv  train_3.csv  train_4.csv  train_5.csv  train_6.csv  train_7.csv  train_8.csv  train_9.csv
frm/: __init__.py  aac.py  cht.py  pcp.py  pcp_properties.json
models/mlknn/: hyperparameters.json  hyperparameters.xlsx  predictions.xlsx  results.xlsx
models/mltsvm/: hyperparameters.json  hyperparameters.xlsx  predictions.xlsx  results.xlsx
scripts/: sampling.py
(+70 files in other folders)
