[project]
name = "antimicrobial-peptides-dop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "iterative-stratification>=0.1.9",
    "modlamp>=4.3.2",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "orjson>=3.11.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scikit-multilearn>=0.2.0",
    "typeguard>=4.4.4",
]
